# pdf2md-ocr

./: .gitignore  Cargo.toml  README.md  build.bat  build_release.ps1  download_pdfium.ps1  download_tessdata.ps1  run_example.bat
src/: cache.rs  config.rs  error.rs  image_processor.rs  language.rs  layout.rs  main.rs  markdown_builder.rs  math.rs  ocr_engine.rs  pdf_processor.rs
