[package]
name = "rust-ocr2md"
version = "0.1.0"
edition = "2021"

[dependencies]
# PDF processing
pdfium-render = "0.8"

# Image processing
image = "0.25"
imageproc = "0.25"

# OCR
tesseract-rs = "0.1"

# Parallel processing
rayon = "1.10"

# CLI and progress
clap = { version = "4.5", features = ["derive"] }
indicatif = { version = "0.17", features = ["rayon"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
